Styles were added to the buttons and text area.
The finishing styles were created for the buttons, sections, and text areas. the comments were writen for them as well.

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
         </fieldset>
 
-        <!-- Within the fieldset with the ID of "build" inlvolves labels and inputs that are associated with datalists. These datalists are give value that the user can choose and the characters are automatically written. This is to give the user all the options and to speed up the process. The last two divs have multiple labels and inputs with the attribute of "type"="radio". This simulates the feeling of a button, an the user can choose "Yes" or "No". -->
+        <!-- Within the fieldset with the ID of "build" inlvolves labels and inputs that are associated with select elements. These elemts give the user buttons and options to speed up the process. This is to give the user all the options and to speed up the process. The last two divs have multiple labels and inputs with the attribute of "type"="radio". This simulates the feeling of a button, an the user can choose "Yes" or "No". -->
 
         <fieldset id="build">
 
@@ -173,7 +173,7 @@
             </div>
             <!-- The "button" element with a "type" attribute and a value of "submit" create a box that the user can use to send the information they typed onto the form. -->
 
-            <section>
+            <section id="buttons">
                 <button type="submit">
                     SEND ORDER
                 </button>
